syntax = "proto3";

option csharp_namespace = "De_Store.Service.Finance.Protos";

package finance;

service FinanceService {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
